<resources>
    <string name="app_name">Papiaa</string>

    <string name="share_intent_chooser">Share your format using:</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_share_paper">Share Paper</string>
    <string name="action_paper_orientation">Change paper orientation</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_paper_to_pixel">Paper Dimensions in Pixels</string>

    <string name="format_paper_size">Paper size: %1$s &#x00D7; %2$s %3$s</string>
    <string name="format_pixel_size" translatable="false">%1$s <font fgcolor="#36ffffff">&#x00D7;</font> %2$s <font fgcolor="#36ffffff">px</font></string>

    <string name="icon_plus" translatable="false">&#xf067;</string>
    <string name="icon_minus" translatable="false">&#xf068;</string>
    <string name="icon_circle" translatable="false">&#xf111;</string>
    <string name="icon_share" translatable="false">&#xf1e0;</string>
    <string name="icon_google_plus" translatable="false">&#xf0d4;</string>
    <string name="icon_code" translatable="false">&#xf121;</string>

    <string name="label_bleeding">Bleed %1$s %2$s</string>
    <string name="label_add_bleeding">Add Bleed</string>
    <string name="title_activity_about">About</string>

    <!-- About -->
    <string name="about_copyright" translatable="false">Papiaa &#x00A9; %1s</string>
    <string name="about_description">An interactive dictionary for international paper formats. Add bleed to all formats in an intuitive way and get the final paper size for your projects.</string>
    <string name="about_version" translatable="false">Version %1s</string>
    <string name="about_rate_app">Rate Papiaa</string>
    <string name="about_recommend">Recommend Papiaa</string>
    <string name="about_acknowledgements">Acknowledgements</string>

    <!-- Recommend -->
    <string name="recommend_body">Hi,\n\nif I need to know the size of a paper format I just open "Papiaa" and look it up! Just try it yourself!\n\n Here is a link to the play store: %1s</string>
    <string name="title_activity_acknowledgments">Open Source Acknowledgements</string>

    <!-- Toasts -->
    <string name="toast_favorite_added">You added %1s to your favorites!</string>
    <string name="title_activity_paper_settings">Settings</string>

    <!-- Units -->
    <string name="unit_millimeter">Millimeter</string>
    <string name="unit_centimeter">Centimeter</string>
    <string name="unit_inch">Inch</string>

    <!-- Orientation -->
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landscape">Landscape</string>

    <!-- Preferences -->
    <string name="pref_default_unit">Paper Size Unit</string>
    <string name="pref_default_orientation">Paper Orientationt</string>

    <!-- Dialog -->
    <string name="dialog_close">Close</string>
    <string name="dialog_ok">OK</string>

    <string name="dialog_title_dimension_in_pixel">Paper size in Pixels</string>
    <string name="dialog_format_title_dimension_in_pixel">%1$s &#x00D7; %2$s %3$s &#x2192; Pixels</string>
    <string name="dialog_text_dimension_in_pixel">Enter the number of \'pixels per inch\' (ppi) you want to use.</string>

</resources>
