<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/material_blue_grey_900"
    tools:context="com.elegantwalrus.papersize.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/material_blue_grey_950">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/version"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/margin_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:gravity="center_horizontal"
                android:textSize="40sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:text="@string/about_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:layout_marginBottom="@dimen/margin_xsmall"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:textColor="@android:color/white"/>

            <!-- Button Rate -->
            <RelativeLayout
                android:id="@+id/action_rate_play_store"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_group_text_height"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/background_paper_button_state">

                <TextView
                    android:id="@+id/text_icon_play_store"
                    android:text="@string/icon_google_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/list_group_text_margin"
                    android:paddingRight="@dimen/list_group_text_margin"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textColor="@color/material_blue_grey_950"/>

                <TextView
                    android:text="@string/about_rate_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/list_group_text_margin"
                    android:layout_toRightOf="@+id/text_icon_play_store"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textColor="@color/material_blue_grey_950"/>

            </RelativeLayout>

            <!-- Button Recommend -->
            <RelativeLayout
                android:id="@+id/action_recommend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_group_text_height"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/background_paper_button_state">

                <TextView
                    android:id="@+id/text_icon_recommend"
                    android:text="@string/icon_share"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/list_group_text_margin"
                    android:paddingRight="@dimen/list_group_text_margin"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textColor="@color/material_blue_grey_950"/>

                <TextView
                    android:text="@string/about_recommend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/list_group_text_margin"
                    android:layout_toRightOf="@+id/text_icon_recommend"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textColor="@color/material_blue_grey_950"/>

            </RelativeLayout>

            <!-- Button Acknowledgments -->
            <RelativeLayout
                android:id="@+id/action_acknowledgements"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_group_text_height"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/background_paper_button_state">

                <TextView
                    android:id="@+id/text_icon_acknowledgements"
                    android:text="@string/icon_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/list_group_text_margin"
                    android:paddingRight="@dimen/list_group_text_margin"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textColor="@color/material_blue_grey_950"/>

                <TextView
                    android:text="@string/about_acknowledgements"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/list_group_text_margin"
                    android:layout_toRightOf="@+id/text_icon_acknowledgements"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textColor="@color/material_blue_grey_950"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/version"
        android:text="@string/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_xsmall"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/copyright"
        android:text="@string/about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/material_dark_blue_gray"/>

</RelativeLayout>
