<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/abc_text_size_large_material"/>

    <ImageView
        android:id="@+id/icon_toogle_orientation"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:padding="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/icon_orientation_portrait"/>

    <papersize.chreez.com.papersize.PaperCanvas
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_above="@+id/action_bar_container"/>

    <RelativeLayout
        android:id="@+id/action_bar_container"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_decrease_bleed"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/icon_minus"
            android:textSize="@dimen/abc_text_size_large_material"/>

        <TextView
            android:id="@+id/text_bleed"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_toRightOf="@+id/text_decrease_bleed"
            android:gravity="center"
            android:text="@string/label_add_bleeding"
            android:textSize="@dimen/abc_text_size_large_material"/>

        <TextView
            android:id="@+id/text_increase_bleed"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_toRightOf="@+id/text_bleed"
            android:gravity="center"
            android:text="@string/icon_plus"
            android:textSize="@dimen/abc_text_size_large_material"/>
    </RelativeLayout>

</RelativeLayout>
